fixes unsafe links

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Ankit Yadav
 email: connectankityadav@gmail.com
 description: Personal Blog of Ankit Yadav (@yadavankit)
-url: # the base hostname & protocol for your site
+url:
 
 
 #
